WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313470
Fix imported/w3c/web-platform-tests/css/css-tables/absolute-tables-002.html
https://bugs.webkit.org/show_bug.cgi?id=313470
Summary
Fix imported/w3c/web-platform-tests/css/css-tables/absolute-tables-002.html
alan
Reported
2026-04-27 12:57:17 PDT
ssia
Attachments
Patch
(7.28 KB, patch)
2026-04-27 12:59 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(7.18 KB, patch)
2026-04-28 05:17 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-04-27 12:59:36 PDT
Created
attachment 479342
[details]
Patch
alan
Comment 2
2026-04-28 05:17:25 PDT
Created
attachment 479349
[details]
[fast-cq]Patch
EWS
Comment 3
2026-04-28 06:59:57 PDT
Committed
312197@main
(343e13bf22dc): <
https://commits.webkit.org/312197@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 479349
[details]
.
Radar WebKit Bug Importer
Comment 4
2026-04-28 07:00:16 PDT
<
rdar://problem/175755871
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug